Move native-image properties to file